# midd4vc-c

./: CMakeLists.txt  README.md
apps/client/: client_app.c
apps/server/: server_app.c
apps/vehicles/: job_catalog.c  job_catalog.h  vehicle_app.c
middleware/: midd4vc_client.c  midd4vc_client.h  midd4vc_job_codec.c  midd4vc_job_codec.h  midd4vc_protocol.h
platform/posix/: mqtt_adapter.c  mqtt_adapter.h
